Added a circular prism
Added a triangular prism
Started adding prism model and view
# 0.00.16 (48875) Feb 13, 2011
Fixed intensity meter for light wave representation
Fixed: Protractor drag areas are incorrect, should only be able to mouse over on the solid part, not the bounding box
Fixed: When dismissing the intensity sensor with the "x" button, when dragging it out again it starts in the wrong spot.
# 0.00.15 (48867) Feb 12, 2011
Fixed: reflected wave is out of phase with incoming wave
Added clock controls to the play area when "wave" mode is selected
Fixed: transmitted wavelength is incorrect
Fixed: transmitted wave is out of phase with incoming wave
# 0.00.14 (48857) Feb 11, 2011
Adjust wave widths to constrain the incident cross sectional width the be fixed
Fixed: speed in wave view is angle dependent, even for incoming wave
# 0.00.13 (48854) Feb 10, 2011
Fixed: Wavelength in n2>n1 should be shorter, not longer
# 0.00.12 (48852) Feb 10, 2011
Fixed areas at interface of mediums
# 0.00.11 (48850) Feb 10, 2011
Started adding wave mode
# 0.00.10 (48830) Feb 9, 2011
# 0.00.09 (48829) Feb 9, 2011
Added an icon for the normal line in the toolbox
Fixed: normal line overlaps with the toolbox
Made it possible to drop intensity sensor back in the toolbox
Made it possible to drop protractor back in the toolbox
Fixed: Intensity meter should go back to the toolbox when the close button is pressed
Fixed: Intensity meter is in the wrong location when dragged out of the toolbox
Added a toolbox with draggable icons
Show "n=?" for mystery objects
Hide slider for mystery objects
Split apart control panel into laser view and tools
Fixed: protractor intercepts mouse events when invisible
Added MediumControlPanel
Improved canvas and stage size
Increased size of intensity meter and protractor
# 0.00.08 (48746) Feb 8, 2011
Fixed protractor location
# 0.00.07 (48744) Feb 8, 2011
Rounded the corners of the control panel